--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^0.18.0",
     "react": "16.6.1",
     "react-native": "0.57.7",
-    "react-native-dotenv": "^0.2.0"
+    "react-native-dotenv": "^0.2.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
