--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-dotenv": "^0.2.0",
+    "react-native-router-flux": "^4.0.6",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
