--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.8.2",
+    "lodash": "^4.17.11",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-dotenv": "^0.2.0",
